@@ -1,57 +1,56 @@
-package com.sprint.mission.discodeit.service.jcf;
+package com.sprint.mission.discodeit.service.basic;
 
 import com.sprint.mission.discodeit.entity.User;
+import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.UserService;
 
-import java.util.*;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
-public class JCFUserService implements UserService {
-    private static final JCFUserService instance = new JCFUserService();
-    private final Map<UUID, User> data = new HashMap<>();
+public class BasicUserService implements UserService {
+    private final UserRepository userRepository;
 
-    private JCFUserService() {}
-
-    public static JCFUserService getInstance() {
-        return instance;
+    public BasicUserService(UserRepository userRepository) {
+        this.userRepository = userRepository;
     }
 
     @Override
     public User createUser(String name) {
         User user = new User(name);
-        data.put(user.getId(), user);
+        userRepository.save(user);
         return user;
     }
 
     @Override
     public Optional<User> getUserById(UUID userId) {
-        return Optional.ofNullable(data.get(userId));
+        return userRepository.getUserById(userId);
     }
 
     @Override
     public List<User> getUsersByName(String name) {
-        return data.values().stream()
+        return userRepository.getAllUsers().stream()
                 .filter(user -> user.getName().equals(name))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<User> getAllUsers() {
-        return new ArrayList<>(data.values());
+        return userRepository.getAllUsers();
     }
 
     @Override
     public void updateUser(UUID userId, String newName) {
-        User user = data.get(userId);
-        if (user != null) {
+        userRepository.getUserById(userId).ifPresent(user -> {
             long updatedTime = System.currentTimeMillis();
             user.update(newName, updatedTime);
-        }
+            userRepository.save(user);
+        });
     }
 
     @Override
     public void deleteUser(UUID userId) {
-        data.remove(userId);
+        userRepository.deleteUser(userId);
     }
-
 }
